# zmk-paw3950-driver

./: CMakeLists.txt  Kconfig  README.md  编译固件说明书.docx
.github/workflows/: build.yml
config/: west.yml
config/boards/arm/seeed_xiao_ble/: seeed_xiao_ble.conf  seeed_xiao_ble.keymap  seeed_xiao_ble.overlay
config/boards/xiao_ble/: xiao_ble.overlay
config/shields/paw3950/: paw3950.config
dts/bindings/: pixart,paw3950.yml
include/: paw3950.h  pixart.h
lib/paw3950/include/: paw3950.h
src/: paw3950.c
